# gui_fps

./: .gitignore  CMakeLists.txt
include/: mb_gui_fps.h  mb_gui_fps_type.h
src/: mb_gui_fps_block.c  mb_gui_fps_finalize.c  mb_gui_fps_init.c  mb_gui_fps_is_blocked.c  mb_gui_fps_mark_as_rendered.c  mb_gui_fps_time_to_next_render.c
